projects/vb6parse/snapshots/parsers/cst/select_statements/select_case_string_comparison.snap
---
source: projects/vb6parse/src/parsers/cst/select_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SelectCaseStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SelectKeyword
                  text: Select
                - kind: Whitespace
                  text: " "
                - kind: CaseKeyword
                  text: Case
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: userInput
                - kind: Newline
                  text: "\n"
                - kind: Whitespace
                  text: "        "
                - kind: CaseClause
                  children:
                    - kind: CaseKeyword
                      text: Case
                    - kind: Whitespace
                      text: " "
                    - kind: StringLiteral
                      text: "\"yes\""
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: StringLiteral
                      text: "\"y\""
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: StringLiteral
                      text: "\"YES\""
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: Whitespace
                          text: "            "
                        - kind: CallStatement
                          children:
                            - kind: Identifier
                              text: DoSomething
                            - kind: Newline
                              text: "\n"
                        - kind: Whitespace
                          text: "        "
                - kind: CaseClause
                  children:
                    - kind: CaseKeyword
                      text: Case
                    - kind: Whitespace
                      text: " "
                    - kind: StringLiteral
                      text: "\"no\""
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: StringLiteral
                      text: "\"n\""
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: StringLiteral
                      text: "\"NO\""
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: Whitespace
                          text: "            "
                        - kind: CallStatement
                          children:
                            - kind: Identifier
                              text: DoSomethingElse
                            - kind: Newline
                              text: "\n"
                        - kind: Whitespace
                          text: "        "
                - kind: CaseElseClause
                  children:
                    - kind: CaseKeyword
                      text: Case
                    - kind: Whitespace
                      text: " "
                    - kind: ElseKeyword
                      text: Else
                    - kind: Newline
                      text: "\n"
                    - kind: StatementList
                      children:
                        - kind: Whitespace
                          text: "            "
                        - kind: CallStatement
                          children:
                            - kind: Identifier
                              text: ShowError
                            - kind: Newline
                              text: "\n"
                        - kind: Whitespace
                          text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: SelectKeyword
                  text: Select
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
